--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -297,7 +297,7 @@
     "                    animator.add(epoch + (i + 1) / num_batches,\n",
     "                             (train_l, train_acc, None))\n",
     "            # 测试态\n",
-    "            test_acc = evaluate_accuracy_gpu(net, test_iter)\n",
+    "            test_acc = d2l.evaluate_accuracy_gpu(net, test_iter)\n",
     "            animator.add(epoch + 1, (None, None, test_acc))\n",
     "        print(f'train loss {train_loss:.3f}, '\n",
     "              f'test loss {test_loss:.3f}')\n",
