fix: tqdm for nb & resume logic

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -9,22 +9,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▍ | 110/130 [02:51<00:31,  1.58s/it]"
+      "/home/liyiming/anaconda3/lib/python3.8/site-packages/albumentations/augmentations/transforms.py:1699: FutureWarning: This class has been deprecated. Please use RandomBrightnessContrast\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109/130 loss:3.2732342828403818  acc:0.19673295454545456\n"
+      "Finished reading the train set of Leaves Dataset (18353 samples found)\n",
+      "Training for fold 0/10...\n",
+      "loaded model from ../models/fold=0-model.pth for resume training with current_epoch=0\n",
+      "Epoch 0/100 training...\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 114/130 [02:57<00:24,  1.54s/it]"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7c074a257d24b3ca9206bbf6cefa9de",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/130 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -40,7 +51,7 @@
     "    'fold': 10,\n",
     "    'lr': 0.01,\n",
     "    'epoch': 100,\n",
-    "    'resume': False,\n",
+    "    'resume': True,\n",
     "    'verbose': True,\n",
     "    'ckpt_path': 'model.pth'\n",
     "}\n",
