feat: remove * 100 in acc

--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -4,7 +4,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished reading the train set of Leaves Dataset (18353 samples found)\n",
+      "Training for fold 0/10...\n",
+      "loaded model from ../models/fold=0-model.pth for resume training with current_epoch=98\n",
+      "Epoch 98/200 training...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a4a8e19c46f34c5889f9241fd69cf869",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/130 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9/130 loss:1.3884424686431884  acc:0.65078125\n",
+      "19/130 loss:1.0285048484802246  acc:0.7234375\n",
+      "29/130 loss:0.8772611091534297  acc:0.7544270833333333\n",
+      "39/130 loss:0.7738103285431862  acc:0.778125\n",
+      "49/130 loss:0.7112247794866562  acc:0.79265625\n"
+     ]
+    }
+   ],
    "source": [
     "from train import train\n",
     "\n",
