--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -13,14 +13,14 @@
      "text": [
       "Finished reading the train set of Leaves Dataset (18353 samples found)\n",
       "Training for fold 0/10...\n",
-      "loaded model from ../models/fold=0-model.pth for resume training with current_epoch=98\n",
+      "loaded model from /home/liyiming/projects/classify-leaves/src/../models/fold=0-model.pth for resume training with current_epoch=98\n",
       "Epoch 98/100 training...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d87606deaf94209aced8c1b089386a3",
+       "model_id": "f68e80c1857741949a6cf1d1d618067c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,28 +35,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/130 loss:0.18158837035298347  acc:0.93984375\n",
-      "19/130 loss:0.1913390349596739  acc:0.934765625\n",
-      "29/130 loss:0.19531231001019478  acc:0.9315104166666667\n",
-      "39/130 loss:0.19651009645313025  acc:0.9314453125\n",
-      "49/130 loss:0.19802159011363984  acc:0.93015625\n",
-      "59/130 loss:0.20293934593598048  acc:0.9295572916666667\n",
-      "69/130 loss:0.20684984390224728  acc:0.9299107142857143\n",
-      "79/130 loss:0.20700840912759305  acc:0.9302734375\n",
-      "89/130 loss:0.2131129710210694  acc:0.9287326388888889\n",
-      "99/130 loss:0.21005747869610786  acc:0.929140625\n",
-      "109/130 loss:0.20799207186157054  acc:0.9296875\n",
-      "119/130 loss:0.20583745917926233  acc:0.9302083333333333\n",
-      "129/130 loss:0.20484364730664978  acc:0.9300720469818975\n",
-      "train loss:0.20484364730664978 acc:0.9300720469818975\n",
-      "acc:0.9400871460993565 acc5:0.9950980397351167\n",
+      "9/130 loss:0.09168943166732788  acc:0.9671875\n",
+      "19/130 loss:0.08367782384157181  acc:0.96953125\n",
+      "29/130 loss:0.07839676576356093  acc:0.9708333333333333\n",
+      "39/130 loss:0.07201727549545467  acc:0.9732421875\n",
+      "49/130 loss:0.07233470048755407  acc:0.97390625\n",
+      "59/130 loss:0.06924101157734791  acc:0.975\n",
+      "69/130 loss:0.06704677770446454  acc:0.9758928571428571\n",
+      "79/130 loss:0.06563090594718232  acc:0.97607421875\n",
+      "89/130 loss:0.0649740661908355  acc:0.9759548611111111\n",
+      "99/130 loss:0.06369339195080101  acc:0.97625\n",
+      "109/130 loss:0.06295397541570392  acc:0.9765625\n",
+      "119/130 loss:0.062175310721310474  acc:0.9768880208333334\n",
+      "129/130 loss:0.06083064679914145  acc:0.9771144881031665\n",
+      "train loss:0.06083064679914145 acc:0.9771144881031665\n",
+      "acc:0.9678649237472767 acc5:1.0\n",
       "Epoch 99/100 training...\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f95927295974a0e94e5da36159cdd9a",
+       "model_id": "7d55df2383954449a6c20ceae58fce99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,47 +71,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9/130 loss:0.2497529923915863  acc:0.91875\n",
-      "19/130 loss:0.2768393330276012  acc:0.90625\n",
-      "29/130 loss:0.28210702290137607  acc:0.90625\n",
-      "39/130 loss:0.26459029223769903  acc:0.91015625\n",
-      "49/130 loss:0.2586407889425755  acc:0.91171875\n",
-      "59/130 loss:0.24961851648986338  acc:0.9147135416666666\n",
-      "69/130 loss:0.2404283313878945  acc:0.9170758928571429\n",
-      "79/130 loss:0.23650851529091596  acc:0.91904296875\n",
-      "89/130 loss:0.23258645451731152  acc:0.9214409722222222\n",
-      "99/130 loss:0.22766286604106425  acc:0.92359375\n",
-      "109/130 loss:0.2278744360940023  acc:0.9230823863636364\n",
-      "119/130 loss:0.22731178514659406  acc:0.9239583333333333\n",
-      "129/130 loss:0.22447507587278584  acc:0.9248047466246897\n",
-      "train loss:0.22447507587278584 acc:0.9248047466246897\n",
-      "acc:0.9237472769481684 acc5:0.9978213507625272\n",
-      "Training for fold 1/10...\n"
+      "9/130 loss:0.10898828208446502  acc:0.97421875\n",
+      "19/130 loss:0.11517179738730192  acc:0.971484375\n"
      ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/liyiming/projects/classify-leaves/src/../models/fold=1-model.pth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-09c85befbbe1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAttributeDict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/projects/classify-leaves/src/train.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(args)\u001b[0m\n\u001b[1;32m    166\u001b[0m         \u001b[0mbest_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresume\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             save_dict = torch.load(path.join(path.dirname(\n\u001b[0m\u001b[1;32m    169\u001b[0m                 __file__), model_path))\n\u001b[1;32m    170\u001b[0m             \u001b[0mcurrent_epoch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msave_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'current_epoch'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001b[0m\n\u001b[1;32m    577\u001b[0m         \u001b[0mpickle_load_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'encoding'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 579\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    580\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_zipfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    581\u001b[0m             \u001b[0;31m# The zipfile reader is going to advance the current file position.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    228\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'w'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    209\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_open_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/liyiming/projects/classify-leaves/src/../models/fold=1-model.pth'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -139,6 +101,13 @@
     "\n",
     "train(args)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
